--- a/default.json5
+++ b/default.json5
@@ -28,8 +28,20 @@
       "matchUpdateTypes": ["minor", "patch", "digest", "pin", "pinDigest"]
     },
     {
-      "description": "v prefix workaround for action updates",
-      "extractVersion": "^(?<version>v?\\d+(?:\\.\\d+){0,2})$",
+      "description": "v prefix workaround for action updates with 1 component",
+      "extractVersion": "^(?<version>v?\\d+)$",
+      "matchDepTypes": ["action"],
+      "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
+    },
+    {
+      "description": "v prefix workaround for action updates with 2 components",
+      "extractVersion": "^(?<version>v?\\d+\\.\\d+)$",
+      "matchDepTypes": ["action"],
+      "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
+    },
+    {
+      "description": "v prefix workaround for action updates with 3 components",
+      "extractVersion": "^(?<version>v?\\d+\\.\\d+\\.\\d+)$",
       "matchDepTypes": ["action"],
       "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
     },
