--- a/default.json5
+++ b/default.json5
@@ -31,13 +31,13 @@
       "description": "v prefix workaround for action updates with 1 component",
       "extractVersion": "^(?<version>v?\\d+)$",
       "matchDepTypes": ["action"],
-      "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
+      "versioning": "regex:^v?(?<major>\\d+)?$"
     },
     {
       "description": "v prefix workaround for action updates with 2 components",
       "extractVersion": "^(?<version>v?\\d+\\.\\d+)$",
       "matchDepTypes": ["action"],
-      "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
+      "versioning": "regex:^v?(?<major>\\d+)(\\.(?<minor>\\d+))?$"
     },
     {
       "description": "v prefix workaround for action updates with 3 components",
